--- a/wms-server/src/main/resources/application.yml
+++ b/wms-server/src/main/resources/application.yml
@@ -10,3 +10,14 @@ spring:
   mvc:
     servlet:
       path: /wms
+
+
+mybatis-plus:
+  mapper-locations: classpath*:mapper/*.xml
+  type-aliases-package: com.ikun.wms.pojo.entity
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: true
+    cache-enabled: true
+
+
