--- a/wms-server/pom.xml
+++ b/wms-server/pom.xml
@@ -41,6 +41,17 @@
 			<version>3.5.7</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.oopsguy.kaptcha</groupId>-->
+<!--			<artifactId>kaptcha-spring-boot-starter</artifactId>-->
+<!--			<version>1.0.0-beta-2</version>-->
+<!--		</dependency>-->
+		<dependency>
+			<groupId>com.github.penggle</groupId>
+			<artifactId>kaptcha</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
