--- a/wms-front/.env
+++ b/wms-front/.env
@@ -10,17 +10,17 @@ VITE_OUTPUT_DIR=dist
 VITE_BASE_URL=/
 
 # 服务端路径前缀
-VITE_API_BASE_URL=/api
+VITE_API_BASE_URL=http://localhost:8080/wms/api
 
 # 本地token存储名称
 VITE_LOCAL_TOKEN=Sure-Token
 
 # 向服务端发送token信息的名称
-VITE_HEADER_TOKEN=Token
+VITE_HEADER_TOKEN=Authorization
 
 # 系统登录路由名称
 VITE_LOGIN_ROUTE_NAME=Login
 
 # 后台地址的上下文路径
-VITE_WAREHOUSE_CONTEXT_PATH=http://localhost:9000/warehouse
+VITE_WAREHOUSE_CONTEXT_PATH=http://localhost:8080/wms
 # VITE_WAREHOUSE_CONTEXT_PATH=http://8.141.144.116:9000/warehouse
