--- a/wms-front/package.json
+++ b/wms-front/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "web-demo",
+  "name": "wms-front",
   "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "echarts": "^5.3.2",
-    "element-plus": "2.0.4",
-    "file-saver": "^2.0.5",
-    "font-awesome": "^4.7.0",
-    "vue": "^3.2.31",
-    "vue-router": "4.0.11",
-    "xlsx": "^0.18.4"
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "echarts": "^5.5.1",
+    "element-plus": "^2.7.7",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/node": "^17.0.22",
-    "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.2.2",
-    "script-loader": "^0.7.2",
-    "vite": "^2.4.4"
+    "@vitejs/plugin-vue": "^5.0.3",
+    "vite": "^5.0.11"
   }
 }
