--- a/wms-server/pom.xml
+++ b/wms-server/pom.xml
@@ -41,6 +41,11 @@
 			<version>3.5.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.penggle</groupId>
