--- a/wms-server/src/main/resources/application.yml
+++ b/wms-server/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/wms
     username: root
-    password: 123456
+    password: gyw123...
   mvc:
     servlet:
       path: /wms/api
